@@ -1,3 +1,15 @@
+2008-07-05 Jorg Schuler <jcsjcs at users.sourceforge.net>
+
+	  src/display.h
+	  src/file_itunesdb.c
+	  src/repository.c
+	  src/display_itdb.c
+	  src/display_playlists.c
+	  src/context_menus.c
+	  src/display_photo.c
+	  src/display_photo.h: get rid of Photo "Playlist" and create a
+	  "Photo" object inthe Playlist view.
+
 2008-06-29 Jorg Schuler <jcsjcs at users.sourceforge.net>
 
 	* src/display_photo.c: fix possible memory leak. Thanks to Mike
